# MeddySDK_Meddydata

./: .gitmodules  CMakeLists.txt  CMakePresets.json  MeddySDK_MeddydataConfig.cmake  README.md
Include/: CMakeLists.txt  Files.cmake  FindPackages.cmake  TargetLinkLibraries.cmake
Include/Files/: MeddySDK_Meddydata_Export.h  meddysdk_meddydata_include_export.h
Include/Files/MeddySDK/Meddydata/: Meddydata.h  Utils.h  Utils.inl
Module/: CMakeLists.txt
Object/: CMakeLists.txt
Shared/: CMakeLists.txt
Source/: CMakeLists.txt  Files.cmake  FindPackages.cmake  TargetLinkLibraries.cmake
Source/Files/: MeddySDK_Meddydata_Export.cpp  Meddydata.cpp  Utils.cpp
Static/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/CMake/Scripts/: GetPathToMeddydata.cmake  TryAddMeddydata_FailCase_ConflictingManifestFileObject.cmake  TryAddMeddydata_FailCase_ConflictingMeddydataFileObject.cmake  TryAddMeddydata_FailCase_NoMeddyproject.cmake  TryAddMeddydata_FailCase_SourceFileDoesNotExist.cmake  TryAddMeddydata_SuccessCase_OnDirectory.cmake  TryAddMeddydata_SuccessCase_OnFile.cmake
Tests/Source/: GetPathToMeddydata.cpp  TryAddMeddydata.cpp
